canvas no longer displayed on mobile view.

--- a/css/project.css
+++ b/css/project.css
@@ -344,6 +344,11 @@ footer{
 		padding-left:0;
 	}
 
+	/*Section*/
+	#canvas{
+		display: none;
+	}
+
 	/*Footer Section*/
 	.social-media li{
 		min-width:100%;
